styling on reset and save button done and double tap feature desabled

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <h1 id="heading"></h1>
     <button id="inc" onclick=fun()>+</button>
     <button id="dec" onclick=dec()>-</button>
-    <button onclick=reset()>Reset</button>
     <br>
-    <button onclick=save()>Save</button>
+    <br>
+    <button id="reset" onclick=reset()>Reset</button>
+    <br> <br>
+    <button id="save" onclick=save()>Save</button>
     <footer>Made by Jaswant Singh</footer>
 </body>
 <script src="app.js"></script>
